<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:fontFamily="@font/gothic_bold"
                android:textSize="14pt"
                android:textColor="@color/colorPrimaryDark"
                android:layout_margin="10dp"
                android:paddingVertical="20dp">
            </TextView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimary50"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/txt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:layout_centerVertical="true"
                    android:hint="@string/hint_name"
                    android:background="@null"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:fontFamily="@font/gothic_normal"
                    android:textStyle="bold"
                    android:textSize="7pt" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimary50"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/txt_nope"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:layout_centerVertical="true"
                    android:hint="@string/hint_nope"
                    android:background="@null"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:fontFamily="@font/gothic_normal"
                    android:textStyle="bold"
                    android:textSize="7pt" />

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimary50"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/txt_user"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:layout_centerVertical="true"
                    android:hint="@string/hint_email"
                    android:background="@null"
                    android:paddingStart="10dp"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="10dp"
                    android:fontFamily="@font/gothic_normal"
                    android:textStyle="bold"
                    android:textSize="7pt" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorPrimary50"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:layout_centerVertical="true"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:fontFamily="@font/gothic_normal"
                    android:textStyle="bold"
                    android:textSize="7pt" />

            </androidx.cardview.widget.CardView>


            <Button
                android:layout_marginTop="50dp"
                android:id="@+id/btn_regis"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_radius"
                android:fontFamily="@font/gothic_bold"
                android:text="@string/text_register">
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/tvlogin"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="6pt"
                android:fontFamily="@font/gothic_normal"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/text_already_member"/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>