<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="3dp"
            app:cardBackgroundColor="@color/colorPrimary20"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothic_normal"
                        android:text="@string/order_id"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textSize="7pt"
                        android:textColor="@color/black">
                    </TextView>
                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothic_normal"
                        android:text="@string/order_id_code"
                        android:padding="5dp"
                        android:textAlignment="textEnd"
                        android:textStyle="bold"
                        android:textSize="7pt"
                        android:textColor="@color/black">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">
                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothic_normal"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textAlignment="textStart"
                        android:text="@string/order_id_rute"
                        android:textSize="7pt">
                    </TextView>

                    <TextView
                        android:id="@+id/txt_date3"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothic_normal"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:textAlignment="textEnd"
                        android:text="waktu"
                        android:textSize="7pt">
                    </TextView>

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_class3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="8pt"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:text="Class"
                    android:fontFamily="@font/gothic_bold"
                    android:textColor="@color/black">
                </TextView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/order_id_lakukan"
                android:textColor="@color/white"
                android:textSize="7pt"
                android:fontFamily="@font/gothic_normal"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/order_id_time"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="7pt"
                android:fontFamily="@font/gothic_normal"
                android:textStyle="bold"
                tools:ignore="RtlCompat">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/colorPrimary20"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/gothic_normal"
                    android:text="@string/order_id_nama_bank"
                    android:textColor="@color/black"
                    android:textSize="7pt">
                </TextView>

                <TextView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:fontFamily="@font/gothic_normal"
                    android:text="@string/order_id_bank"
                    android:textColor="@color/black"
                    android:textSize="7pt">
                </TextView>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/gothic_normal"
                android:text="@string/order_id_rekening"
                android:textColor="@color/black"
                android:textSize="7pt">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="@font/gothic_normal"
                android:text="12345678"
                android:textColor="@color/black"
                android:textSize="7pt">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="@font/gothic_normal"
                android:text="@string/order_id_bank_jumlah"
                android:textColor="@color/black"
                android:textSize="7pt">
            </TextView>

            <TextView
                android:id="@+id/txt_price3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                android:fontFamily="@font/gothic_bold"
                android:text="Harga"
                android:textColor="@color/black"
                android:textSize="7pt">
            </TextView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/colorPrimary20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="@font/gothic_normal"
                android:text="@string/order_id_metode"
                android:textColor="@color/black"
                android:textSize="7pt">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="@font/gothic_normal"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="7pt">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/btn_selesai"
        android:background="@drawable/button_radius3"
        android:layout_width="match_parent"
        android:elevation="3dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothic_bold"
        android:text="@string/selesai_btn"
        android:textAlignment="center"
        android:textColor="@color/black">
    </Button>


</LinearLayout>